@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,9 +19,7 @@ package org.polypheny.db.languages;
 import java.beans.PropertyChangeListener;
 import java.beans.PropertyChangeSupport;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
@@ -85,11 +83,18 @@ public class LanguageManager {
     }
 
 
+    public List<ImplementationContext> anyPrepareQuery( QueryContext context, Transaction transaction ) {
+        return anyPrepareQuery( context, context.getStatement() != null ? context.getStatement() : transaction.createStatement() );
+    }
+
+
+    // This method is still called from the Avatica interface and leaves the statement management to the caller.
+    // This should be refactored to use the new method only transmitting the transaction as soon as the
+    // new prism interface is enabled
     public List<ImplementationContext> anyPrepareQuery( QueryContext context, Statement statement ) {
         Transaction transaction = statement.getTransaction();
-
         if ( transaction.isAnalyze() ) {
-            context.getInformationTarget().accept( transaction.getQueryAnalyzer() );
+            context.getInformationTarget().accept( statement.getTransaction().getQueryAnalyzer() );
         }
 
         if ( transaction.isAnalyze() ) {
@@ -98,7 +103,12 @@ public class LanguageManager {
         List<ParsedQueryContext> parsedQueries;
 
         try {
-            parsedQueries = context.getLanguage().getSplitter().apply( context );
+            // handle empty query
+            if ( context.getQuery().trim().isEmpty() ) {
+                throw new GenericRuntimeException( String.format( "%s query is empty", context.getLanguage().serializedName() ) );
+            }
+
+            parsedQueries = context.getLanguage().splitter().apply( context );
         } catch ( Throwable e ) {
             log.warn( "Error on preparing query: " + e.getMessage() );
             if ( transaction.isAnalyze() ) {
@@ -112,10 +122,14 @@ public class LanguageManager {
             statement.getOverviewDuration().stop( "Parsing" );
         }
 
-        Processor processor = context.getLanguage().getProcessorSupplier().get();
+        Processor processor = context.getLanguage().processorSupplier().get();
         List<ImplementationContext> implementationContexts = new ArrayList<>();
         boolean previousDdl = false;
+        int i = 0;
         for ( ParsedQueryContext parsed : parsedQueries ) {
+            if ( i != 0 ) {
+                statement = transaction.createStatement();
+            }
             try {
                 // test if parsing was successful
                 if ( parsed.getQueryNode().isEmpty() ) {
@@ -152,7 +166,7 @@ public class LanguageManager {
                         parsed.addTransaction( transaction );
                     }
                     previousDdl = false;
-                    if ( context.getLanguage().getValidatorSupplier() != null ) {
+                    if ( context.getLanguage().validatorSupplier() != null ) {
                         if ( transaction.isAnalyze() ) {
                             statement.getOverviewDuration().start( "Validation" );
                         }
@@ -188,6 +202,7 @@ public class LanguageManager {
                 implementationContexts.add( ImplementationContext.ofError( e, parsed, statement ) );
                 return implementationContexts;
             }
+            i++;
         }
         return implementationContexts;
     }
@@ -209,14 +224,14 @@ public class LanguageManager {
                 transaction.rollback();
             } catch ( TransactionException ex ) {
                 // Ignore
+                log.warn( "Error during rollback: " + ex.getMessage() );
             }
         }
     }
 
 
-    public List<ExecutedContext> anyQuery( QueryContext context, Statement statement ) {
-        List<ImplementationContext> prepared = anyPrepareQuery( context, statement );
-        Transaction transaction = statement.getTransaction();
+    public List<ExecutedContext> anyQuery( QueryContext context ) {
+        List<ImplementationContext> prepared = anyPrepareQuery( context, context.getTransactions().get( context.getTransactions().size() - 1 ) );
 
         List<ExecutedContext> executedContexts = new ArrayList<>();
 
@@ -227,12 +242,13 @@ public class LanguageManager {
                 }
                 executedContexts.add( implementation.execute( implementation.getStatement() ) );
             } catch ( Throwable e ) {
+                Transaction transaction = implementation.getStatement().getTransaction();
                 if ( transaction.isAnalyze() && implementation.getException().isEmpty() ) {
                     transaction.getQueryAnalyzer().attachStacktrace( e );
                 }
                 cancelTransaction( transaction );
 
-                executedContexts.add( ExecutedContext.ofError( e, implementation ) );
+                executedContexts.add( ExecutedContext.ofError( e, implementation, null ) );
                 return executedContexts;
             }
         }
@@ -242,13 +258,12 @@ public class LanguageManager {
 
 
     public static List<ParsedQueryContext> toQueryNodes( QueryContext queries ) {
-        Processor processor = queries.getLanguage().getProcessorSupplier().get();
-        List<? extends Node> statements = processor.parse( queries.getQuery() );
+        Processor processor = queries.getLanguage().processorSupplier().get();
+        List<String> splitQueries = processor.splitStatements( queries.getQuery() );
 
-        return Pair.zip( statements, Arrays.stream( queries.getQuery().split( ";" ) ).filter( q -> !q.trim().isEmpty() ).collect( Collectors.toList() ) )
-                .stream()
+        return splitQueries.stream().flatMap( q -> processor.parse( q ).stream().map( single -> Pair.of( single, q ) ) )
                 .map( p -> ParsedQueryContext.fromQuery( p.right, p.left, queries ) )
-                .collect( Collectors.toList() );
+                .toList();
     }
 
 }
