@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,14 +24,11 @@ import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.Deque;
-import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.NotImplementedException;
 import org.jetbrains.annotations.NotNull;
@@ -39,7 +36,6 @@ import org.jetbrains.annotations.Nullable;
 import org.polypheny.db.algebra.AlgNode;
 import org.polypheny.db.algebra.AlgRoot;
 import org.polypheny.db.algebra.core.JoinAlgType;
-import org.polypheny.db.algebra.core.document.DocumentAlg;
 import org.polypheny.db.algebra.core.document.DocumentScan;
 import org.polypheny.db.algebra.core.document.DocumentValues;
 import org.polypheny.db.algebra.core.lpg.LpgAlg;
@@ -47,7 +43,7 @@ import org.polypheny.db.algebra.logical.common.LogicalTransformer;
 import org.polypheny.db.algebra.logical.document.LogicalDocumentScan;
 import org.polypheny.db.algebra.logical.document.LogicalDocumentValues;
 import org.polypheny.db.algebra.logical.lpg.LogicalLpgScan;
-import org.polypheny.db.algebra.logical.relational.LogicalValues;
+import org.polypheny.db.algebra.logical.relational.LogicalRelValues;
 import org.polypheny.db.algebra.type.AlgDataType;
 import org.polypheny.db.algebra.type.AlgDataTypeField;
 import org.polypheny.db.algebra.type.AlgDataTypeFieldImpl;
@@ -60,7 +56,6 @@ import org.polypheny.db.catalog.entity.allocation.AllocationEntity;
 import org.polypheny.db.catalog.entity.allocation.AllocationPartition;
 import org.polypheny.db.catalog.entity.allocation.AllocationPlacement;
 import org.polypheny.db.catalog.entity.allocation.AllocationTable;
-import org.polypheny.db.catalog.entity.logical.LogicalCollection;
 import org.polypheny.db.catalog.entity.logical.LogicalColumn;
 import org.polypheny.db.catalog.entity.logical.LogicalEntity;
 import org.polypheny.db.catalog.entity.logical.LogicalGraph;
@@ -71,10 +66,13 @@ import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
 import org.polypheny.db.catalog.logistic.DataModel;
 import org.polypheny.db.catalog.snapshot.Snapshot;
 import org.polypheny.db.config.RuntimeConfig;
-import org.polypheny.db.plan.AlgOptCluster;
 import org.polypheny.db.rex.RexNode;
-import org.polypheny.db.routing.LogicalQueryInformation;
+import org.polypheny.db.routing.ColumnDistribution;
+import org.polypheny.db.routing.ColumnDistribution.FullPartition;
+import org.polypheny.db.routing.ColumnDistribution.PartialPartition;
+import org.polypheny.db.routing.ColumnDistribution.RoutedDistribution;
 import org.polypheny.db.routing.Router;
+import org.polypheny.db.routing.RoutingContext;
 import org.polypheny.db.schema.trait.ModelTrait;
 import org.polypheny.db.tools.RoutedAlgBuilder;
 import org.polypheny.db.transaction.Statement;
@@ -102,121 +100,6 @@ public abstract class BaseRouter implements Router {
     }
 
 
-    protected Map<Long, List<AllocationColumn>> selectPlacement( LogicalTable table, List<LogicalColumn> logicalColumns, List<Long> excludedAdapterIds ) {
-        Map<Long, List<AllocationColumn>> partitionsToColumns = new HashMap<>();
-
-        Snapshot snapshot = Catalog.snapshot();
-
-        List<AllocationPartition> partitions = snapshot.alloc().getPartitionsFromLogical( table.id );
-
-        for ( AllocationPartition partition : partitions ) {
-            partitionsToColumns.put( partition.id, getPlacementsOfPartition( partition, table, logicalColumns, excludedAdapterIds ).stream().sorted( Comparator.comparingInt( AllocationColumn::getPosition ) ).collect( Collectors.toList() ) );
-        }
-
-        return partitionsToColumns;
-    }
-
-
-    protected List<AllocationColumn> getPlacementsOfPartition( AllocationPartition partition, LogicalTable table, List<LogicalColumn> columns, List<Long> excludedAdapterIds ) {
-        Snapshot snapshot = Catalog.snapshot();
-
-        List<AllocationColumn> columnPlacements = new ArrayList<>();
-        List<Long> columnIds = columns.stream().map( c -> c.id ).collect( Collectors.toList() );
-
-        Map<Long, List<AllocationColumn>> columnsOfPlacements = new HashMap<>();
-
-        for ( AllocationPlacement placement : snapshot.alloc().getPlacementsFromLogical( table.id ) ) {
-            Optional<AllocationEntity> optionalAlloc = snapshot.alloc().getAlloc( placement.id, partition.id );
-            // is the alloc on this partition even present or the placement belongs to an excluded one
-            if ( optionalAlloc.isEmpty() || excludedAdapterIds.contains( placement.adapterId ) ) {
-                continue;
-            }
-
-            List<AllocationColumn> allocColumns = snapshot.alloc().getColumns( placement.id ).stream().filter( c -> columnIds.contains( c.columnId ) ).collect( Collectors.toList() );
-            columnsOfPlacements.put( placement.id, allocColumns );
-        }
-
-        List<List<AllocationColumn>> mostToLeastColumns = columnsOfPlacements.values().stream().sorted( ( a, b ) -> b.size() - a.size() ).collect( Collectors.toList() );
-
-        return selectBiggest( columns, mostToLeastColumns );
-    }
-
-
-    /**
-     * We take the biggest available placement and remove these columns and continue with the remaining columns
-     *
-     * @param columns
-     * @param mostToLeastColumns
-     * @return
-     */
-    private List<AllocationColumn> selectBiggest( List<LogicalColumn> columns, List<List<AllocationColumn>> mostToLeastColumns ) {
-        if ( columns.isEmpty() ) {
-            return List.of();
-        }
-        if ( mostToLeastColumns.isEmpty() ) {
-            throw new GenericRuntimeException( "Could not route correctly" );
-        }
-
-        List<Long> remainingColumns = columns.stream().map( c -> c.id ).collect( Collectors.toList() );
-
-        List<AllocationColumn> allocColumns = mostToLeastColumns.get( 0 );
-        List<Long> allocIds = allocColumns.stream().map( a -> a.columnId ).collect( Collectors.toList() );
-
-        List<List<AllocationColumn>> mostToLeastColumnsUpdated = mostToLeastColumns.subList( 1, mostToLeastColumns.size() );
-        // remove the selected columns from the list
-        mostToLeastColumnsUpdated = mostToLeastColumnsUpdated.stream().map( cs -> cs.stream().filter( column -> remainingColumns.contains( column.columnId ) && !allocIds.contains( column.columnId ) ).collect( Collectors.toList() ) ).collect( Collectors.toList() );
-
-        return Stream.concat(
-                allocColumns.stream(), selectBiggest(
-                        columns.stream().filter( c -> !allocIds.contains( c.id ) ).collect( Collectors.toList() ),
-                        mostToLeastColumnsUpdated
-                ).stream()
-        ).collect( Collectors.toList() );
-    }
-
-
-    /**
-     * Execute the table scan on the first placement of a table
-     *
-     * Recursively take the largest placements to build the complete placement (guarantees least amount of placements used => least amount of scans)
-     */
-    protected Map<Long, List<AllocationColumn>> selectPlacementOld( LogicalTable table, List<LogicalColumn> logicalColumns, List<Long> excludedAdapterIds ) {
-        // Find the adapter with the most column placements
-        long adapterIdWithMostPlacements = -1;
-        int numOfPlacements = 0;
-        for ( Entry<Long, List<Long>> entry : Catalog.snapshot().alloc().getColumnPlacementsByAdapters( table.id ).entrySet() ) {
-            if ( !excludedAdapterIds.contains( entry.getKey() ) && entry.getValue().size() > numOfPlacements ) {
-                adapterIdWithMostPlacements = entry.getKey();
-                numOfPlacements = entry.getValue().size();
-            }
-        }
-
-        List<LogicalColumn> missingColumns = new ArrayList<>();
-
-        // Take the adapter with most placements as base and add missing column placements recursively
-        List<AllocationColumn> placementList = new ArrayList<>();
-        AllocationPlacement longestPlacement = catalog.getSnapshot().alloc().getPlacement( adapterIdWithMostPlacements, table.id ).orElseThrow();
-        for ( LogicalColumn column : logicalColumns ) {
-            Optional<AllocationColumn> optionalColumn = catalog.getSnapshot().alloc().getColumn( longestPlacement.id, column.id );
-            optionalColumn.ifPresentOrElse(
-                    placementList::add,
-                    () -> missingColumns.add( column )
-            );
-        }
-
-        Map<Long, List<AllocationColumn>> placementToColumns = new HashMap<>();
-        placementToColumns.put( longestPlacement.id, placementList );
-        if ( !missingColumns.isEmpty() ) {
-            List<Long> newExcludedAdapterIds = new ArrayList<>( excludedAdapterIds );
-            newExcludedAdapterIds.add( longestPlacement.adapterId );
-            Map<Long, List<AllocationColumn>> rest = selectPlacement( table, missingColumns, newExcludedAdapterIds );
-            placementToColumns.putAll( rest );
-        }
-        return placementToColumns;
-
-    }
-
-
     public AlgNode recursiveCopy( AlgNode node ) {
         List<AlgNode> inputs = new LinkedList<>();
         if ( node.getInputs() != null && !node.getInputs().isEmpty() ) {
@@ -237,19 +120,19 @@ public abstract class BaseRouter implements Router {
 
         if ( entity.unwrap( LogicalTable.class ).isPresent() ) {
             List<AllocationEntity> allocations = statement.getTransaction().getSnapshot().alloc().getFromLogical( entity.id );
-            table = entity.unwrap( LogicalEntity.class ).get();
-            builder.scan( allocations.get( 0 ) );
+            table = entity.unwrap( LogicalTable.class ).orElseThrow();
+            builder.relScan( allocations.get( 0 ) );
         } else if ( entity.unwrap( AllocationTable.class ).isPresent() ) {
-            builder.scan( entity.unwrap( AllocationTable.class ).get() );
+            builder.relScan( entity.unwrap( AllocationTable.class ).get() );
             table = statement.getTransaction().getSnapshot().rel().getTable( entity.unwrap( AllocationTable.class ).orElseThrow().logicalId ).orElseThrow();
         } else {
             throw new NotImplementedException();
         }
 
-        if ( table.getRowType().getFieldCount() == builder.peek().getTupleType().getFieldCount() && !table.getRowType().equals( builder.peek().getTupleType() ) ) {
+        if ( table.getTupleType().getFieldCount() == builder.peek().getTupleType().getFieldCount() && !table.getTupleType().equals( builder.peek().getTupleType() ) ) {
             // we adjust the
-            Map<String, Integer> namesIndexMapping = table.getRowType().getFields().stream().collect( Collectors.toMap( AlgDataTypeField::getName, AlgDataTypeField::getIndex ) );
-            List<Integer> target = builder.peek().getTupleType().getFields().stream().map( f -> namesIndexMapping.get( f.getName() ) ).collect( Collectors.toList() );
+            Map<String, Integer> namesIndexMapping = table.getTupleType().getFields().stream().collect( Collectors.toMap( AlgDataTypeField::getName, AlgDataTypeField::getIndex ) );
+            List<Integer> target = builder.peek().getTupleType().getFields().stream().map( f -> namesIndexMapping.get( f.getName() ) ).toList();
             builder.permute( Mappings.bijection( target ) );
         }
 
@@ -263,7 +146,7 @@ public abstract class BaseRouter implements Router {
             @Nullable List<Long> excludedPlacements ) {
         Snapshot snapshot = statement.getTransaction().getSnapshot();
 
-        List<AllocationPlacement> placements = snapshot.alloc().getPlacementsFromLogical( scan.entity.id ).stream().filter( p -> excludedPlacements == null || !excludedPlacements.contains( p.id ) ).collect( Collectors.toList() );
+        List<AllocationPlacement> placements = snapshot.alloc().getPlacementsFromLogical( scan.entity.id ).stream().filter( p -> excludedPlacements == null || !excludedPlacements.contains( p.id ) ).toList();
 
         List<AllocationPartition> partitions = snapshot.alloc().getPartitionsFromLogical( scan.entity.id );
 
@@ -279,13 +162,13 @@ public abstract class BaseRouter implements Router {
     }
 
 
-    public RoutedAlgBuilder handleValues( LogicalValues node, RoutedAlgBuilder builder ) {
+    public RoutedAlgBuilder handleValues( LogicalRelValues node, RoutedAlgBuilder builder ) {
         return builder.values( node.tuples, node.getTupleType() );
     }
 
 
-    protected List<RoutedAlgBuilder> handleValues( LogicalValues node, List<RoutedAlgBuilder> builders ) {
-        return builders.stream().map( builder -> builder.values( node.tuples, node.getTupleType() ) ).collect( Collectors.toList() );
+    protected List<RoutedAlgBuilder> handleValues( LogicalRelValues node, List<RoutedAlgBuilder> builders ) {
+        return builders.stream().map( builder -> builder.values( node.tuples, node.getTupleType() ) ).toList();
     }
 
 
@@ -322,123 +205,87 @@ public abstract class BaseRouter implements Router {
     }
 
 
-    public AlgNode buildJoinedScan( Statement statement, AlgOptCluster cluster, LogicalTable table, Map<Long, List<AllocationColumn>> partitionsColumnsPlacements ) {
-        RoutedAlgBuilder builder = RoutedAlgBuilder.create( statement, cluster );
+    public AlgNode buildJoinedScan( ColumnDistribution columnDistribution, RoutingContext context ) {
+        RoutedAlgBuilder builder = context.getRoutedAlgBuilder();
 
         if ( RuntimeConfig.JOINED_TABLE_SCAN_CACHE.getBoolean() ) {
-            AlgNode cachedNode = joinedScanCache.getIfPresent( partitionsColumnsPlacements.hashCode() );
+            AlgNode cachedNode = joinedScanCache.getIfPresent( columnDistribution.hashCode() );
             if ( cachedNode != null ) {
                 return cachedNode;
             }
         }
+        RoutedDistribution routedDistribution = columnDistribution.route();
+        context.routedDistribution = routedDistribution;
 
-        for ( Map.Entry<Long, List<AllocationColumn>> partitionToColumnsPlacements : partitionsColumnsPlacements.entrySet() ) {
+        for ( FullPartition partition : routedDistribution.partitions() ) {
 
-            //List<AllocationPartition> partitions = catalog.getSnapshot().alloc().getPartitionsFromLogical( placements.values().iterator().next().get( 0 ).logicalTableId );
-            //long placementId = placementToColumns.getKey();
-            List<AllocationColumn> currentPlacements = partitionToColumnsPlacements.getValue();
-            long partitionId = partitionToColumnsPlacements.getKey();
-            // Sort by adapter
-            Map<Long, List<AllocationColumn>> columnsByPlacements = new HashMap<>();
-            for ( AllocationColumn column : currentPlacements ) {
-                if ( !columnsByPlacements.containsKey( column.placementId ) ) {
-                    columnsByPlacements.put( column.placementId, new LinkedList<>() );
-                }
-                columnsByPlacements.get( column.placementId ).add( column );
-            }
-
-            if ( columnsByPlacements.size() == 1 ) {
-                long placementId = partitionsColumnsPlacements.get( partitionId ).get( 0 ).placementId;
-                List<AllocationColumn> columns = columnsByPlacements.get( placementId );
-
-                AllocationEntity cpp = catalog.getSnapshot().alloc().getAlloc( placementId, partitionId ).orElseThrow();
+            if ( !partition.needsJoin() ) {
+                PartialPartition partitionColumns = partition.partials().get( 0 );
 
                 builder = handleRelScan(
                         builder,
-                        statement,
-                        cpp );
+                        context.getStatement(),
+                        partitionColumns.entity() );
                 // Final project
-                buildFinalProject( builder, columns );
+                buildFinalProject( builder, partitionColumns.columns() );
 
-
-            } else if ( columnsByPlacements.size() > 1 ) {
+            } else {
                 // We need to join placements on different adapters
-
-                // Get primary key
-                long pkid = table.primaryKey;
-                List<Long> pkColumnIds = catalog.getSnapshot().rel().getPrimaryKey( pkid ).orElseThrow().columnIds;
-                List<LogicalColumn> pkColumns = new ArrayList<>();
-                for ( long pkColumnId : pkColumnIds ) {
-                    pkColumns.add( catalog.getSnapshot().rel().getColumn( pkColumnId ).orElseThrow() );
-                }
-
-                // Add primary key
-                for ( Entry<Long, List<AllocationColumn>> entry : columnsByPlacements.entrySet() ) {
-                    for ( LogicalColumn pkColumn : pkColumns ) {
-                        AllocationColumn pkPlacement = catalog.getSnapshot().alloc().getColumn( entry.getValue().get( 0 ).placementId, pkColumn.id ).orElseThrow();
-                        if ( !entry.getValue().contains( pkPlacement ) ) {
-                            entry.getValue().add( pkPlacement );
-                        }
-                    }
-                }
 
                 Deque<String> queue = new ArrayDeque<>();
                 boolean first = true;
-                for ( List<AllocationColumn> columns : columnsByPlacements.values() ) {
-                    List<AllocationColumn> ordered = columns.stream().sorted( Comparator.comparingInt( a -> a.position ) ).collect( Collectors.toList() );
-                    AllocationColumn column = ordered.get( 0 );
-                    AllocationEntity cpp = catalog.getSnapshot().alloc().getAlloc( column.placementId, partitionId ).orElseThrow();
+                for ( PartialPartition allocation : partition.partials() ) {
+                    List<AllocationColumn> ordered = allocation.columns().stream().sorted( Comparator.comparingInt( a -> a.position ) ).toList();
+                    handleRelScan( builder, context.getStatement(), allocation.entity() );
 
-                    handleRelScan(
-                            builder,
-                            statement,
-                            cpp );
+                    RoutedAlgBuilder finalBuilder = builder;
+                    // project away all unnecessary columns
+                    builder.project( ordered.stream().map( a -> finalBuilder.field( a.getLogicalColumnName() ) ).toList() );
                     if ( first ) {
                         first = false;
-                    } else {
-                        List<RexNode> rexNodes = new ArrayList<>();
-                        for ( AllocationColumn p : ordered ) {
-                            if ( pkColumnIds.contains( p.columnId ) ) {
-                                String alias = columns.get( 0 ).placementId + "_" + p.columnId;
-                                rexNodes.add( builder.alias( builder.field( p.getLogicalColumnName() ), alias ) );
-                                queue.addFirst( alias );
-                                queue.addFirst( p.getLogicalColumnName() );
-                            } else {
-                                rexNodes.add( builder.field( p.getLogicalColumnName() ) );
-                            }
-                        }
-                        builder.project( rexNodes );
-                        List<RexNode> joinConditions = new ArrayList<>();
-                        for ( int i = 0; i < pkColumnIds.size(); i++ ) {
-                            joinConditions.add( builder.equals(
-                                    builder.field( 2, queue.removeFirst() ),
-                                    builder.field( 2, queue.removeFirst() ) ) );
-                        }
-                        builder.join( JoinAlgType.INNER, joinConditions );
+                        continue;
                     }
+
+                    List<RexNode> rexNodes = new ArrayList<>();
+                    for ( AllocationColumn p : ordered ) {
+                        if ( columnDistribution.getPrimaryIds().contains( p.columnId ) ) {
+                            String alias = p.placementId + "_" + p.columnId;
+                            rexNodes.add( builder.alias( builder.field( p.getLogicalColumnName() ), alias ) );
+                            queue.addFirst( alias );
+                            queue.addFirst( p.getLogicalColumnName() );
+                        } else {
+                            rexNodes.add( builder.field( p.getLogicalColumnName() ) );
+                        }
+                    }
+                    builder.project( rexNodes );
+                    List<RexNode> joinConditions = new ArrayList<>();
+                    for ( int i = 0; i < columnDistribution.getPrimaryIds().size(); i++ ) {
+                        joinConditions.add( builder.equals(
+                                builder.field( 2, queue.removeFirst() ),
+                                builder.field( 2, queue.removeFirst() ) ) );
+                    }
+                    builder.join( JoinAlgType.INNER, joinConditions );
+
                 }
                 // Final project
-                buildFinalProject( builder, currentPlacements );
-            } else {
-                throw new GenericRuntimeException( "The table '%s' seems to have no placement. This should not happen!", table.name );
+                buildFinalProject( builder, partition.getOrderedColumns() );
             }
         }
 
-        if ( partitionsColumnsPlacements.size() == 1 ) {
+        if ( columnDistribution.getPartitions().size() == 1 ) {
             return builder.build();
         }
 
-        builder.union( true, partitionsColumnsPlacements.size() );
+        builder.union( true, columnDistribution.getPartitions().size() );
 
         AlgNode node = builder.build();
         if ( RuntimeConfig.JOINED_TABLE_SCAN_CACHE.getBoolean() ) {
-            joinedScanCache.put( partitionsColumnsPlacements.hashCode(), node );
+            joinedScanCache.put( columnDistribution.hashCode(), node );
         }
 
-        AllocationColumn placement = new ArrayList<>( partitionsColumnsPlacements.values() ).get( 0 ).get( 0 );
         // todo dl: remove after RowType refactor
-        if ( catalog.getSnapshot().getNamespace( placement.namespaceId ).orElseThrow().dataModel == DataModel.DOCUMENT ) {
-            AlgDataType rowType = new AlgRecordType( List.of( new AlgDataTypeFieldImpl( 1L, "d", 0, cluster.getTypeFactory().createPolyType( PolyType.DOCUMENT ) ) ) );
+        if ( catalog.getSnapshot().getNamespace( columnDistribution.getTable().namespaceId ).orElseThrow().dataModel == DataModel.DOCUMENT ) {
+            AlgDataType rowType = new AlgRecordType( List.of( new AlgDataTypeFieldImpl( 1L, "d", 0, context.getCluster().getTypeFactory().createPolyType( PolyType.DOCUMENT ) ) ) );
             builder.push( LogicalTransformer.create(
                     node.getCluster(),
                     List.of( node ),
@@ -459,25 +306,11 @@ public abstract class BaseRouter implements Router {
         List<LogicalColumn> placementList = currentPlacements.stream()
                 .map( col -> catalog.getSnapshot().rel().getColumn( col.columnId ).orElseThrow() )
                 .sorted( Comparator.comparingInt( col -> col.position ) )
-                .collect( Collectors.toList() );
+                .toList();
         for ( LogicalColumn catalogColumn : placementList ) {
             rexNodes.add( builder.field( catalogColumn.name ) );
         }
         builder.project( rexNodes );
-    }
-
-
-    private AlgNode handleOnePartitionScan( Statement statement, AlgOptCluster cluster, Map<Long, List<AllocationColumn>> partitionsColumns, RoutedAlgBuilder builder, Long partitionId ) {
-        List<AllocationColumn> columns = partitionsColumns.get( partitionId );
-
-        // each column is one entity
-        List<AllocationTable> tables = columns.stream().map( c -> catalog.getSnapshot().alloc().getAlloc( c.placementId, partitionId ).orElseThrow().unwrap( AllocationTable.class ).orElseThrow() ).collect( Collectors.toList() );
-
-        List<AlgNode> nodes = tables.stream().map( t -> handleRelScan( RoutedAlgBuilder.create( statement, cluster ), statement, t ).build() ).collect( Collectors.toList() );
-        // todo remove multiple scans, add projection
-        nodes.forEach( builder::push );
-
-        return nodes.size() == 1 ? builder.build() : builder.union( true ).build();
     }
 
 
@@ -488,13 +321,21 @@ public abstract class BaseRouter implements Router {
 
         LogicalGraph graph = alg.entity.unwrap( LogicalGraph.class ).orElseThrow();
 
-        List<Long> placements = snapshot.alloc().getFromLogical( graph.id ).stream().filter( p -> excludedPlacements == null || !excludedPlacements.contains( p.id ) ).map( p -> p.adapterId ).collect( Collectors.toList() );
+        List<AllocationPlacement> placements = snapshot.alloc().getPlacementsFromLogical( graph.id ).stream().filter( p -> excludedPlacements == null || !excludedPlacements.contains( p.id ) ).toList();
         if ( targetAlloc != null ) {
             return new LogicalLpgScan( alg.getCluster(), alg.getTraitSet(), targetAlloc, alg.getTupleType() );
         }
 
-        for ( long placement : placements ) {
-            AllocationEntity entity = snapshot.alloc().getEntity( placement, graph.id ).orElseThrow();
+        for ( AllocationPlacement placement : placements ) {
+            List<AllocationPartition> partitions = snapshot.alloc().getPartitionsFromLogical( graph.id );
+            if ( partitions.size() != 1 ) {
+                throw new GenericRuntimeException( "Graphs with multiple partitions are not supported yet." );
+            }
+            Optional<AllocationEntity> optEntity = snapshot.alloc().getAlloc( placement.id, partitions.get( 0 ).id );
+            if ( optEntity.isEmpty() ) {
+                throw new GenericRuntimeException( "Error while routing graph query." );
+            }
+            AllocationEntity entity = optEntity.orElseThrow();
 
             // a native placement was used, we go with that
             return new LogicalLpgScan( alg.getCluster(), alg.getTraitSet(), entity, alg.getTupleType() );
@@ -521,7 +362,7 @@ public abstract class BaseRouter implements Router {
         List<PolyString> names = substitutionGraph.names;
         if ( names.isEmpty() ) {
             // no label means all entites
-            names = namespace.dataModel == DataModel.DOCUMENT ? snapshot.doc().getCollections( graph.namespaceId, null ).stream().map( c -> new PolyString( c.name ) ).collect( Collectors.toList() ) : snapshot.rel().getTables( graph.namespaceId, null ).stream().map( t -> new PolyString( t.name ) ).collect( Collectors.toList() );
+            names = namespace.dataModel == DataModel.DOCUMENT ? snapshot.doc().getCollections( graph.namespaceId, null ).stream().map( c -> new PolyString( c.name ) ).toList() : snapshot.rel().getTables( graph.namespaceId, null ).stream().map( t -> new PolyString( t.name ) ).toList();
         }
 
         for ( PolyString name : names ) {
@@ -543,41 +384,8 @@ public abstract class BaseRouter implements Router {
     }
 
 
-    private AlgNode handleGraphOnRelational( LogicalLpgScan alg, LogicalNamespace namespace, Statement statement, Long placementId ) {
-        AlgOptCluster cluster = alg.getCluster();
-        List<LogicalTable> tables = Catalog.snapshot().rel().getTables( namespace.id, null );
-        List<Pair<String, AlgNode>> scans = tables.stream()
-                .map( t -> Pair.of( t.name, buildJoinedScan( statement, cluster, tables.get( 0 ), null ) ) )
-                .collect( Collectors.toList() );
-
-        // Builder infoBuilder = cluster.getTypeFactory().builder();
-        // infoBuilder.add( "g", null, PolyType.GRAPH );
-
-        return LogicalTransformer.create( cluster, Pair.right( scans ), Pair.left( scans ), ModelTrait.RELATIONAL, ModelTrait.GRAPH, GraphType.of(), true );
-    }
-
-
-    private AlgNode handleGraphOnDocument( LogicalLpgScan alg, LogicalNamespace namespace, Statement statement, Long placementId ) {
-        AlgOptCluster cluster = alg.getCluster();
-        List<LogicalCollection> collections = Catalog.snapshot().doc().getCollections( namespace.id, null );
-        List<Pair<String, AlgNode>> scans = collections.stream()
-                .map( t -> {
-                    RoutedAlgBuilder algBuilder = RoutedAlgBuilder.create( statement, alg.getCluster() );
-                    AlgNode scan = algBuilder.documentScan( t ).build();
-                    routeDocument( algBuilder, (AlgNode & DocumentAlg) scan, statement );
-                    return Pair.of( t.name, algBuilder.build() );
-                } )
-                .collect( Collectors.toList() );
-
-        // Builder infoBuilder = cluster.getTypeFactory().builder();
-        // infoBuilder.add( "g", null, PolyType.GRAPH );
-
-        return LogicalTransformer.create( cluster, Pair.right( scans ), Pair.left( scans ), ModelTrait.DOCUMENT, ModelTrait.GRAPH, GraphType.of(), true );
-    }
-
-
     @Override
-    public List<RoutedAlgBuilder> route( AlgRoot algRoot, Statement statement, LogicalQueryInformation queryInformation ) {
+    public List<RoutedAlgBuilder> route( AlgRoot algRoot, RoutingContext context ) {
         throw new UnsupportedOperationException();
     }
 
