@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,7 +28,6 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -52,18 +51,19 @@ import org.polypheny.db.algebra.logical.document.LogicalDocumentScan;
 import org.polypheny.db.algebra.logical.document.LogicalDocumentValues;
 import org.polypheny.db.algebra.logical.lpg.LogicalLpgModify;
 import org.polypheny.db.algebra.logical.lpg.LogicalLpgScan;
-import org.polypheny.db.algebra.logical.relational.LogicalFilter;
 import org.polypheny.db.algebra.logical.relational.LogicalModifyCollect;
-import org.polypheny.db.algebra.logical.relational.LogicalProject;
+import org.polypheny.db.algebra.logical.relational.LogicalRelFilter;
 import org.polypheny.db.algebra.logical.relational.LogicalRelModify;
+import org.polypheny.db.algebra.logical.relational.LogicalRelProject;
 import org.polypheny.db.algebra.logical.relational.LogicalRelScan;
-import org.polypheny.db.algebra.logical.relational.LogicalValues;
+import org.polypheny.db.algebra.logical.relational.LogicalRelValues;
 import org.polypheny.db.algebra.type.AlgDataType;
 import org.polypheny.db.algebra.type.AlgDataTypeField;
 import org.polypheny.db.catalog.Catalog;
 import org.polypheny.db.catalog.entity.Entity;
 import org.polypheny.db.catalog.entity.allocation.AllocationColumn;
 import org.polypheny.db.catalog.entity.allocation.AllocationEntity;
+import org.polypheny.db.catalog.entity.allocation.AllocationGraph;
 import org.polypheny.db.catalog.entity.allocation.AllocationPartition;
 import org.polypheny.db.catalog.entity.allocation.AllocationPlacement;
 import org.polypheny.db.catalog.entity.logical.LogicalCollection;
@@ -76,7 +76,7 @@ import org.polypheny.db.catalog.snapshot.Snapshot;
 import org.polypheny.db.partition.PartitionManager;
 import org.polypheny.db.partition.PartitionManagerFactory;
 import org.polypheny.db.partition.properties.PartitionProperty;
-import org.polypheny.db.plan.AlgOptCluster;
+import org.polypheny.db.plan.AlgCluster;
 import org.polypheny.db.processing.WhereClauseVisitor;
 import org.polypheny.db.rex.RexCall;
 import org.polypheny.db.rex.RexDynamicParam;
@@ -84,7 +84,7 @@ import org.polypheny.db.rex.RexIndexRef;
 import org.polypheny.db.rex.RexLiteral;
 import org.polypheny.db.rex.RexNode;
 import org.polypheny.db.routing.DmlRouter;
-import org.polypheny.db.routing.LogicalQueryInformation;
+import org.polypheny.db.routing.RoutingContext;
 import org.polypheny.db.routing.RoutingManager;
 import org.polypheny.db.schema.trait.ModelTrait;
 import org.polypheny.db.tools.AlgBuilder;
@@ -100,7 +100,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
     @Override
     public AlgNode routeDml( LogicalRelModify modify, Statement statement ) {
-        AlgOptCluster cluster = modify.getCluster();
+        AlgCluster cluster = modify.getCluster();
 
         if ( modify.entity == null ) {
             throw new GenericRuntimeException( "Unexpected operator!" );
@@ -113,7 +113,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
         LogicalTable table = oTable.get();
 
         List<LogicalColumn> columns = catalog.getSnapshot().rel().getColumns( table.id );
-        List<Long> columnIds = columns.stream().map( c -> c.id ).collect( Collectors.toList() );
+        List<Long> columnIds = columns.stream().map( c -> c.id ).toList();
 
         // Make sure that this table can be modified
         if ( !table.modifiable ) {
@@ -128,7 +128,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
         }
 
         long pkid = table.primaryKey;
-        List<Long> pkColumnIds = catalog.getSnapshot().rel().getPrimaryKey( pkid ).orElseThrow().columnIds;
+        List<Long> pkColumnIds = catalog.getSnapshot().rel().getPrimaryKey( pkid ).orElseThrow().fieldIds;
         LogicalColumn pkColumn = catalog.getSnapshot().rel().getColumn( pkColumnIds.get( 0 ) ).orElseThrow();
 
         // Essentially gets a list of all stores where this table resides
@@ -202,7 +202,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
                 WhereClauseVisitor whereClauseVisitor = new WhereClauseVisitor( statement, columnIds.indexOf( property.partitionColumnId ) );
                 modify.accept( new AlgShuttleImpl() {
                     @Override
-                    public AlgNode visit( LogicalFilter filter ) {
+                    public AlgNode visit( LogicalRelFilter filter ) {
                         super.visit( filter );
                         filter.accept( whereClauseVisitor );
                         return filter;
@@ -214,7 +214,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
                     whereClauseValues = whereClauseVisitor.getValues().stream()
                             .map( PolyValue::toJson )
-                            .collect( Collectors.toList() );
+                            .toList();
                     if ( log.isDebugEnabled() ) {
                         log.debug( "Found Where Clause Values: {}", whereClauseValues );
                     }
@@ -337,20 +337,20 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
     }
 
 
-    private Triple<Long, String, Boolean> handleDmlInsert( List<String> updateColumns, LogicalRelModify modify, List<Long> columnIds, List<LogicalColumn> columns, PartitionProperty property, LogicalTable table, Set<Long> accessedPartitionList, PartitionManager partitionManager, AllocationPlacement pkPlacement, Statement statement, List<AllocationColumn> placementsOnAdapter, AlgOptCluster cluster, List<AlgNode> modifies, List<? extends RexNode> sourceExpressions, List<Map<Long, PolyValue>> allValues ) {
+    private Triple<Long, String, Boolean> handleDmlInsert( List<String> updateColumns, LogicalRelModify modify, List<Long> columnIds, List<LogicalColumn> columns, PartitionProperty property, LogicalTable table, Set<Long> accessedPartitionList, PartitionManager partitionManager, AllocationPlacement pkPlacement, Statement statement, List<AllocationColumn> placementsOnAdapter, AlgCluster cluster, List<AlgNode> modifies, List<? extends RexNode> sourceExpressions, List<Map<Long, PolyValue>> allValues ) {
         String partitionValue = null;
         long identPart = -1;
         boolean worstCaseRouting;
         boolean operationWasRewritten = false;
         int i;
-        if ( modify.getInput() instanceof LogicalValues ) {
+        if ( modify.getInput() instanceof LogicalRelValues ) {
             // Get fieldList and map columns to index since they could be in arbitrary order
             int partitionColumnIndex = -1;
             for ( int j = 0; j < (modify.getInput()).getTupleType().getFields().size(); j++ ) {
                 String columnFieldName = (modify.getInput()).getTupleType().getFields().get( j ).getName();
 
                 // Retrieve columnId of fieldName and map it to its fieldList location of INSERT Stmt
-                int columnIndex = columns.stream().map( c -> c.name ).collect( Collectors.toList() ).indexOf( columnFieldName );
+                int columnIndex = columns.stream().map( c -> c.name ).toList().indexOf( columnFieldName );
 
                 // Determine location of partitionColumn in fieldList
                 if ( columnIds.get( columnIndex ) == property.partitionColumnId ) {
@@ -364,7 +364,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
             // Will executed all required tuples that belong on the same partition jointly
             Map<Long, List<ImmutableList<RexLiteral>>> tuplesOnPartition = new HashMap<>();
-            for ( ImmutableList<RexLiteral> currentTuple : ((LogicalValues) modify.getInput()).tuples ) {
+            for ( ImmutableList<RexLiteral> currentTuple : ((LogicalRelValues) modify.getInput()).tuples ) {
 
                 if ( partitionColumnIndex == -1 || currentTuple.get( partitionColumnIndex ).getValue() == null ) {
                     partitionValue = PartitionManager.NULL_STRING;
@@ -389,7 +389,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
                 }
 
                 for ( ImmutableList<RexLiteral> row : partitionMapping.getValue() ) {
-                    LogicalValues newLogicalValues = new LogicalValues(
+                    LogicalRelValues newLogicalRelValues = new LogicalRelValues(
                             modify.getCluster(),
                             modify.getCluster().traitSet(),
                             (modify.getInput()).getTupleType(),
@@ -398,7 +398,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
                     AllocationEntity allocation = catalog.getSnapshot().alloc().getAlloc( pkPlacement.id, currentPartitionId ).orElseThrow();
 
                     AlgNode input = buildDml(
-                            newLogicalValues,
+                            newLogicalRelValues,
                             RoutedAlgBuilder.create( statement, cluster ),
                             table,
                             placementsOnAdapter,
@@ -423,14 +423,14 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
             }
             operationWasRewritten = true;
 
-        } else if ( modify.getInput() instanceof LogicalProject
-                && ((LogicalProject) modify.getInput()).getInput() instanceof LogicalValues ) {
+        } else if ( modify.getInput() instanceof LogicalRelProject
+                && ((LogicalRelProject) modify.getInput()).getInput() instanceof LogicalRelValues ) {
 
             String partitionColumnName = catalog.getSnapshot().rel().getColumn( property.partitionColumnId ).orElseThrow().name;
             List<String> fieldNames = modify.getInput().getTupleType().getFieldNames();
 
             LogicalRelModify ltm = modify;
-            LogicalProject lproject = (LogicalProject) ltm.getInput();
+            LogicalRelProject lproject = (LogicalRelProject) ltm.getInput();
 
             List<RexNode> fieldValues = lproject.getProjects();
 
@@ -439,7 +439,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
                 if ( partitionColumnName.equals( columnName ) ) {
 
-                    if ( ((LogicalProject) modify.getInput()).getProjects().get( i ).getKind().equals( Kind.DYNAMIC_PARAM ) ) {
+                    if ( ((LogicalRelProject) modify.getInput()).getProjects().get( i ).getKind().equals( Kind.DYNAMIC_PARAM ) ) {
 
                         // Needed to identify the column which contains the partition value
                         long partitionValueIndex = ((RexDynamicParam) fieldValues.get( i )).getIndex();
@@ -499,7 +499,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
                         operationWasRewritten = true;
                     } else {
-                        partitionValue = ((LogicalProject) modify.getInput()).getProjects().get( i ).toString().replace( "'", "" );
+                        partitionValue = ((LogicalRelProject) modify.getInput()).getProjects().get( i ).toString().replace( "'", "" );
                         identPart = (int) partitionManager.getTargetPartitionId( table, property, partitionValue );
                         accessedPartitionList.add( identPart );
                     }
@@ -594,15 +594,15 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
 
     @Override
-    public AlgNode handleConditionalExecute( AlgNode node, Statement statement, LogicalQueryInformation queryInformation ) {
+    public AlgNode handleConditionalExecute( AlgNode node, RoutingContext context ) {
         LogicalConditionalExecute lce = (LogicalConditionalExecute) node;
-        RoutedAlgBuilder builder = RoutedAlgBuilder.create( statement, node.getCluster() );
-        builder = RoutingManager.getInstance().getFallbackRouter().routeFirst( lce.getLeft(), builder, statement, node.getCluster(), queryInformation );
+        RoutedAlgBuilder builder = context.getRoutedAlgBuilder();
+        builder = RoutingManager.getInstance().getFallbackRouter().routeFirst( lce.getLeft(), builder, context );
         AlgNode action;
         if ( lce.getRight() instanceof LogicalConditionalExecute ) {
-            action = handleConditionalExecute( lce.getRight(), statement, queryInformation );
+            action = handleConditionalExecute( lce.getRight(), context );
         } else if ( lce.getRight() instanceof LogicalRelModify ) {
-            action = routeDml( (LogicalRelModify) lce.getRight(), statement );
+            action = routeDml( (LogicalRelModify) lce.getRight(), context.getStatement() );
         } else {
             throw new IllegalArgumentException();
         }
@@ -612,20 +612,20 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
 
     @Override
-    public AlgNode handleConstraintEnforcer( AlgNode alg, Statement statement, LogicalQueryInformation queryInformation ) {
+    public AlgNode handleConstraintEnforcer( AlgNode alg, RoutingContext context ) {
         LogicalConstraintEnforcer constraint = (LogicalConstraintEnforcer) alg;
-        RoutedAlgBuilder builder = RoutedAlgBuilder.create( statement, alg.getCluster() );
-        builder = RoutingManager.getInstance().getFallbackRouter().routeFirst( constraint.getRight(), builder, statement, alg.getCluster(), queryInformation );
+        RoutedAlgBuilder builder = context.getRoutedAlgBuilder();
+        builder = RoutingManager.getInstance().getFallbackRouter().routeFirst( constraint.getRight(), builder, context );
 
         if ( constraint.getLeft() instanceof RelModify ) {
             return LogicalConstraintEnforcer.create(
-                    routeDml( (LogicalRelModify) constraint.getLeft(), statement ),
+                    routeDml( (LogicalRelModify) constraint.getLeft(), context.getStatement() ),
                     builder.build(),
                     constraint.getExceptionClasses(),
                     constraint.getExceptionMessages() );
         } else if ( constraint.getLeft() instanceof BatchIterator ) {
             return LogicalConstraintEnforcer.create(
-                    handleBatchIterator( constraint.getLeft(), statement, queryInformation ),
+                    handleBatchIterator( constraint.getLeft(), context ),
                     builder.build(),
                     constraint.getExceptionClasses(),
                     constraint.getExceptionMessages() );
@@ -636,20 +636,20 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
 
     @Override
-    public AlgNode handleBatchIterator( AlgNode alg, Statement statement, LogicalQueryInformation queryInformation ) {
+    public AlgNode handleBatchIterator( AlgNode alg, RoutingContext context ) {
         LogicalBatchIterator iterator = (LogicalBatchIterator) alg;
         AlgNode input;
         if ( iterator.getInput() instanceof RelModify ) {
-            input = routeDml( (LogicalRelModify) iterator.getInput(), statement );
+            input = routeDml( (LogicalRelModify) iterator.getInput(), context.getStatement() );
         } else if ( iterator.getInput() instanceof ConditionalExecute ) {
-            input = handleConditionalExecute( iterator.getInput(), statement, queryInformation );
+            input = handleConditionalExecute( iterator.getInput(), context );
         } else if ( iterator.getInput() instanceof ConstraintEnforcer ) {
-            input = handleConstraintEnforcer( iterator.getInput(), statement, queryInformation );
+            input = handleConstraintEnforcer( iterator.getInput(), context );
         } else {
             throw new GenericRuntimeException( "BachIterator had an unknown child!" );
         }
 
-        return LogicalBatchIterator.create( input, statement );
+        return LogicalBatchIterator.create( input, context.getStatement() );
     }
 
 
@@ -680,6 +680,12 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
     public AlgNode routeGraphDml( LogicalLpgModify alg, Statement statement, @Nullable AllocationEntity target, @Nullable List<Long> excludedPlacements ) {
         Snapshot snapshot = statement.getTransaction().getSnapshot();
         List<AlgNode> modifies = new ArrayList<>();
+
+        if ( alg.entity.unwrap( AllocationGraph.class ).isPresent() ) {
+            // we already selected an allocation entity to execute on
+            return alg;
+        }
+
         LogicalGraph graph = alg.entity.unwrap( LogicalGraph.class ).orElseThrow();
 
         if ( target != null ) {
@@ -694,7 +700,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
         List<AllocationPlacement> targetPlacements = catalog.getSnapshot().alloc().getPlacementsFromLogical( graph.id );
         if ( excludedPlacements != null ) {
-            targetPlacements = targetPlacements.stream().filter( p -> !excludedPlacements.contains( p.id ) ).collect( Collectors.toList() );
+            targetPlacements = targetPlacements.stream().filter( p -> !excludedPlacements.contains( p.id ) ).toList();
         }
 
         for ( AllocationPlacement placement : targetPlacements ) {
@@ -760,8 +766,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
                     statement,
                     target,
                     excludedPlacements ) );
-        } else if ( node instanceof LogicalValues ) {
-            LogicalValues values = (LogicalValues) node;
+        } else if ( node instanceof LogicalRelValues values ) {
 
             return super.handleValues( values, builder );
         } else if ( node instanceof LogicalDocumentValues ) {
@@ -779,7 +784,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
             List<AllocationColumn> placements,
             AllocationEntity allocEntity,
             Statement statement,
-            AlgOptCluster cluster,
+            AlgCluster cluster,
             boolean remapParameterValues,
             List<Map<Long, PolyValue>> parameterValues ) {
         for ( int i = 0; i < node.getInputs().size(); i++ ) {
@@ -801,9 +806,9 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
             return handleDocuments( (LogicalDocumentValues) node, builder );
         } else if ( node instanceof Values ) {
             return handleValues( node, builder, table, placements );
-        } else if ( node instanceof LogicalProject ) {
+        } else if ( node instanceof LogicalRelProject ) {
             return handleLogicalProject( node, builder, table, placements, statement, remapParameterValues, parameterValues );
-        } else if ( node instanceof LogicalFilter ) {
+        } else if ( node instanceof LogicalRelFilter ) {
             return handleLogicalFilter( node, builder, table, placements, statement );
         } else {
             return super.handleGeneric( node, builder );
@@ -822,10 +827,10 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
     private RoutedAlgBuilder handleLogicalFilter( AlgNode node, RoutedAlgBuilder builder, LogicalTable table, List<AllocationColumn> placements, Statement statement ) {
         List<LogicalColumn> columns = statement.getTransaction().getSnapshot().rel().getColumns( table.id );
         if ( columns.size() != placements.size() ) { // partitioned, check if there is a illegal condition
-            RexCall call = ((RexCall) ((LogicalFilter) node).getCondition());
+            RexCall call = ((RexCall) ((LogicalRelFilter) node).getCondition());
 
             for ( RexNode operand : call.operands ) {
-                dmlConditionCheck( (LogicalFilter) node, table, placements, operand );
+                dmlConditionCheck( (LogicalRelFilter) node, table, placements, operand );
             }
         }
         return super.handleGeneric( node, builder );
@@ -848,13 +853,13 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
         List<LogicalColumn> columns = statement.getTransaction().getSnapshot().rel().getColumns( table.id );
         PartitionProperty property = statement.getTransaction().getSnapshot().alloc().getPartitionProperty( table.id ).orElseThrow();
         if ( columns.size() == placements.size() ) { // full placement, generic handling is sufficient
-            if ( property.isPartitioned && remapParameterValues ) {  //  && ((LogicalProject) node).getInput().getRowType().toString().equals( "RecordType(INTEGER ZERO)" )
+            if ( property.isPartitioned && remapParameterValues ) {
                 return remapParameterizedDml( node, builder, statement, parameterValues );
             } else {
                 return super.handleGeneric( node, builder );
             }
         } else { // vertically partitioned, adjust project
-            if ( ((LogicalProject) node).getInput().getTupleType().toString().equals( "RecordType(INTEGER ZERO)" ) ) {
+            if ( ((LogicalRelProject) node).getInput().getTupleType().toString().equals( "RecordType(INTEGER ZERO)" ) ) {
                 if ( property.isPartitioned && remapParameterValues ) {
                     builder = remapParameterizedDml( node, builder, statement, parameterValues );
                 }
@@ -869,7 +874,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
                 for ( AllocationColumn ccp : placements ) {
                     rexNodes.add( builder.field( ccp.getLogicalColumnName() ) );
                 }
-                for ( RexNode rexNode : ((LogicalProject) node).getProjects() ) {
+                for ( RexNode rexNode : ((LogicalRelProject) node).getProjects() ) {
                     if ( !(rexNode instanceof RexIndexRef) ) {
                         rexNodes.add( rexNode );
                     }
@@ -881,7 +886,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
 
     private AlgBuilder handleValues( AlgNode node, RoutedAlgBuilder builder, LogicalTable table, List<AllocationColumn> placements ) {
-        LogicalValues values = (LogicalValues) node;
+        LogicalRelValues values = (LogicalRelValues) node;
 
         builder = super.handleValues( values, builder );
 
@@ -902,16 +907,15 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
 
 
     private AlgBuilder handleSelectFromOtherTable( RoutedAlgBuilder builder, LogicalTable catalogTable, Statement statement ) {
-        LogicalTable fromTable = catalogTable;
         Snapshot snapshot = statement.getTransaction().getSnapshot();
         // Select from other table
         snapshot = statement.getDataContext().getSnapshot();
-        if ( snapshot.alloc().getFromLogical( fromTable.id ).size() > 1 ) {
+        if ( snapshot.alloc().getFromLogical( catalogTable.id ).size() > 1 ) {
             throw new UnsupportedOperationException( "DMLs from other partitioned tables is not supported" );
         }
 
-        long pkid = fromTable.primaryKey;
-        List<Long> pkColumnIds = snapshot.rel().getPrimaryKey( pkid ).orElseThrow().columnIds;
+        long pkid = catalogTable.primaryKey;
+        List<Long> pkColumnIds = snapshot.rel().getPrimaryKey( pkid ).orElseThrow().fieldIds;
         LogicalColumn pkColumn = snapshot.rel().getColumn( pkColumnIds.get( 0 ) ).orElseThrow();
         List<AllocationColumn> pkPlacements = snapshot.alloc().getColumnFromLogical( pkColumn.id ).orElseThrow();
 
@@ -921,7 +925,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
             nodes.add( super.handleRelScan(
                     builder,
                     statement,
-                    fromTable ).build() );
+                    catalogTable ).build() );
         }
 
         if ( nodes.size() == 1 ) {
@@ -932,7 +936,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
     }
 
 
-    private void dmlConditionCheck( LogicalFilter node, LogicalTable catalogTable, List<AllocationColumn> placements, RexNode operand ) {
+    private void dmlConditionCheck( LogicalRelFilter node, LogicalTable catalogTable, List<AllocationColumn> placements, RexNode operand ) {
         if ( operand instanceof RexIndexRef ) {
             int index = ((RexIndexRef) operand).getIndex();
             AlgDataTypeField field = node.getInput().getTupleType().getFields().get( index );
@@ -978,7 +982,7 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
         }
 
         List<RexNode> projects = new ArrayList<>();
-        for ( RexNode project : ((LogicalProject) node).getProjects() ) {
+        for ( RexNode project : ((LogicalRelProject) node).getProjects() ) {
             if ( project instanceof RexDynamicParam ) {
                 long newIndex = parameterValues.get( 0 ).size();
                 long oldIndex = ((RexDynamicParam) project).getIndex();
@@ -992,11 +996,11 @@ public class DmlRouterImpl extends BaseRouter implements DmlRouter {
             }
         }
 
-        LogicalValues logicalValues = LogicalValues.createOneRow( node.getCluster() );
-        LogicalProject newProject = new LogicalProject(
+        LogicalRelValues logicalRelValues = LogicalRelValues.createOneRow( node.getCluster() );
+        LogicalRelProject newProject = new LogicalRelProject(
                 node.getCluster(),
                 node.getTraitSet(),
-                logicalValues,
+                logicalRelValues,
                 projects,
                 node.getTupleType()
         );
