@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,8 +34,8 @@ import org.polypheny.db.transaction.Statement;
 
 public class MqlDeletePlacement extends MqlCollectionStatement implements ExecutableStatement {
 
-    public MqlDeletePlacement( ParserPos pos, String collection, List<String> stores ) {
-        super( collection, pos );
+    public MqlDeletePlacement( ParserPos pos, String collection, String namespace, List<String> stores ) {
+        super( collection, namespace, pos );
         this.stores = stores;
     }
 
@@ -50,10 +50,10 @@ public class MqlDeletePlacement extends MqlCollectionStatement implements Execut
 
         List<DataStore<?>> dataStores = stores
                 .stream()
-                .map( store -> (DataStore<?>) adapterManager.getAdapter( store ) )
+                .map( store -> adapterManager.getStore( store ).orElseThrow() )
                 .collect( Collectors.toList() );
 
-        if ( statement.getTransaction().getSnapshot().alloc().getFromLogical( collection.id ).stream().noneMatch( p -> dataStores.stream().map( Adapter::getAdapterId ).collect( Collectors.toList() ).contains( p.adapterId ) ) ) {
+        if ( statement.getTransaction().getSnapshot().alloc().getFromLogical( collection.id ).stream().noneMatch( p -> dataStores.stream().map( Adapter::getAdapterId ).toList().contains( p.adapterId ) ) ) {
             throw new GenericRuntimeException( "Error while adding a new collection placement, placement already present." );
         }
 
