@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 
 package org.polypheny.db.adapter.neo4j;
 
-import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -24,6 +23,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.stream.Collectors;
+import lombok.Getter;
+import lombok.experimental.SuperBuilder;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.calcite.linq4j.AbstractEnumerable;
 import org.apache.calcite.linq4j.Enumerable;
 import org.apache.calcite.linq4j.Enumerator;
@@ -35,6 +37,7 @@ import org.neo4j.driver.Result;
 import org.neo4j.driver.Transaction;
 import org.polypheny.db.adapter.DataContext;
 import org.polypheny.db.adapter.neo4j.rules.relational.NeoScan;
+import org.polypheny.db.adapter.neo4j.types.NestedPolyType;
 import org.polypheny.db.adapter.neo4j.util.NeoUtil;
 import org.polypheny.db.algebra.AlgNode;
 import org.polypheny.db.algebra.core.common.Modify;
@@ -53,7 +56,7 @@ import org.polypheny.db.catalog.entity.physical.PhysicalField;
 import org.polypheny.db.catalog.entity.physical.PhysicalGraph;
 import org.polypheny.db.catalog.logistic.DataModel;
 import org.polypheny.db.catalog.snapshot.Snapshot;
-import org.polypheny.db.plan.AlgOptCluster;
+import org.polypheny.db.plan.AlgCluster;
 import org.polypheny.db.plan.AlgTraitSet;
 import org.polypheny.db.plan.Convention;
 import org.polypheny.db.rex.RexNode;
@@ -61,29 +64,30 @@ import org.polypheny.db.schema.impl.AbstractEntityQueryable;
 import org.polypheny.db.schema.types.ModifiableTable;
 import org.polypheny.db.schema.types.QueryableEntity;
 import org.polypheny.db.schema.types.TranslatableEntity;
-import org.polypheny.db.type.PolyType;
 import org.polypheny.db.type.entity.PolyValue;
-import org.polypheny.db.util.Pair;
 
 /**
- * Relational Neo4j representation of a {@link org.polypheny.db.schema.PolyphenyDbSchema} entity
+ * Relational Neo4j representation of a {@link PhysicalEntity} entity
  */
+@Slf4j
+@SuperBuilder(toBuilder = true)
 public class NeoEntity extends PhysicalEntity implements TranslatableEntity, ModifiableTable, QueryableEntity {
 
+    @Getter
     private final List<? extends PhysicalField> fields;
 
     private final NeoNamespace namespace;
 
 
     protected NeoEntity( PhysicalEntity physical, List<? extends PhysicalField> fields, NeoNamespace namespace ) {
-        super( physical.id, physical.allocationId, physical.logicalId, physical.name, physical.namespaceId, physical.namespaceName, physical.dataModel, physical.adapterId );
+        super( physical.id, physical.allocationId, physical.logicalId, physical.name, physical.namespaceId, physical.namespaceName, physical.uniqueFieldIds, physical.dataModel, physical.adapterId );
         this.fields = fields;
         this.namespace = namespace;
     }
 
 
     @Override
-    public AlgNode toAlg( AlgOptCluster cluster, AlgTraitSet traitSet ) {
+    public AlgNode toAlg( AlgCluster cluster, AlgTraitSet traitSet ) {
         return new NeoScan( cluster, traitSet.replace( NeoConvention.INSTANCE ), this );
     }
 
@@ -96,7 +100,7 @@ public class NeoEntity extends PhysicalEntity implements TranslatableEntity, Mod
      */
     @Override
     public Modify<Entity> toModificationTable(
-            AlgOptCluster cluster,
+            AlgCluster cluster,
             AlgTraitSet traits,
             Entity physical,
             AlgNode child,
@@ -115,10 +119,9 @@ public class NeoEntity extends PhysicalEntity implements TranslatableEntity, Mod
     }
 
 
-
     @Override
-    public Serializable[] getParameterArray() {
-        return new Serializable[0];
+    public PolyValue[] getParameterArray() {
+        return new PolyValue[0];
     }
 
 
@@ -150,24 +153,25 @@ public class NeoEntity extends PhysicalEntity implements TranslatableEntity, Mod
     }
 
 
-    public AlgDataType getRowType() {
+    public AlgDataType getTupleType() {
         if ( dataModel == DataModel.RELATIONAL ) {
             return buildProto().apply( AlgDataTypeFactory.DEFAULT );
         }
-        return super.getRowType();
+        return super.getTupleType();
     }
 
 
     public AlgProtoDataType buildProto() {
         final AlgDataTypeFactory.Builder fieldInfo = AlgDataTypeFactory.DEFAULT.builder();
 
-        for ( PhysicalColumn column : fields.stream().map( f -> f.unwrap( PhysicalColumn.class ).orElseThrow() ).sorted( Comparator.comparingInt( a -> a.position ) ).collect( Collectors.toList() ) ) {
+        for ( PhysicalColumn column : fields.stream().map( f -> f.unwrap( PhysicalColumn.class ).orElseThrow() ).sorted( Comparator.comparingInt( a -> a.position ) ).toList() ) {
             AlgDataType sqlType = column.getAlgDataType( AlgDataTypeFactory.DEFAULT );
             fieldInfo.add( column.id, column.logicalName, column.name, sqlType ).nullable( column.nullable );
         }
 
         return AlgDataTypeImpl.proto( fieldInfo.build() );
     }
+
 
     public static class NeoQueryable extends AbstractEntityQueryable<PolyValue[], NeoEntity> {
 
@@ -176,7 +180,7 @@ public class NeoEntity extends PhysicalEntity implements TranslatableEntity, Mod
 
         public NeoQueryable( DataContext dataContext, Snapshot snapshot, NeoEntity entity ) {
             super( dataContext, snapshot, entity );
-            this.rowType = entity.getRowType();
+            this.rowType = entity.getTupleType();
         }
 
 
@@ -185,23 +189,12 @@ public class NeoEntity extends PhysicalEntity implements TranslatableEntity, Mod
             return execute(
                     String.format( "MATCH (n:%s) RETURN %s", entity.name, buildAllQuery() ),
                     getTypes(),
-                    getComponentType(),
                     Map.of() ).enumerator();
         }
 
 
-        private List<PolyType> getComponentType() {
-            return rowType.getFields().stream().map( t -> {
-                if ( t.getType().getComponentType() != null ) {
-                    return t.getType().getComponentType().getPolyType();
-                }
-                return null;
-            } ).collect( Collectors.toList() );
-        }
-
-
-        private List<PolyType> getTypes() {
-            return rowType.getFields().stream().map( t -> t.getType().getPolyType() ).collect( Collectors.toList() );
+        private NestedPolyType getTypes() {
+            return NestedPolyType.from( rowType );
         }
 
 
@@ -217,23 +210,27 @@ public class NeoEntity extends PhysicalEntity implements TranslatableEntity, Mod
          * @param prepared mapping of parameters and their components if they are collections
          */
         @SuppressWarnings("UnusedDeclaration")
-        public Enumerable<PolyValue[]> execute( String query, List<PolyType> types, List<PolyType> componentTypes, Map<Long, Pair<PolyType, PolyType>> prepared ) {
+        public Enumerable<PolyValue[]> execute( String query, NestedPolyType types, Map<Long, NestedPolyType> prepared ) {
             Transaction trx = getTrx();
 
             dataContext.getStatement().getTransaction().registerInvolvedAdapter( entity.namespace.store );
 
+            if ( log.isDebugEnabled() ) {
+                log.warn( "Executing query: {}", query );
+            }
+
             List<Result> results = new ArrayList<>();
             if ( dataContext.getParameterValues().size() == 1 ) {
-                results.add( trx.run( query, toParameters( dataContext.getParameterValues().get( 0 ), prepared ) ) );
+                results.add( trx.run( query, toParameters( dataContext.getParameterValues().get( 0 ), prepared, false ) ) );
             } else if ( !dataContext.getParameterValues().isEmpty() ) {
                 for ( Map<Long, PolyValue> value : dataContext.getParameterValues() ) {
-                    results.add( trx.run( query, toParameters( value, prepared ) ) );
+                    results.add( trx.run( query, toParameters( value, prepared, false ) ) );
                 }
             } else {
                 results.add( trx.run( query ) );
             }
 
-            Function1<Record, PolyValue[]> getter = NeoQueryable.getter( types, componentTypes );
+            Function1<Record, PolyValue[]> getter = NeoQueryable.getter( types );
 
             return new AbstractEnumerable<>() {
                 @Override
@@ -250,19 +247,19 @@ public class NeoEntity extends PhysicalEntity implements TranslatableEntity, Mod
          * @param values the values to execute the query with
          * @param parameterTypes the types of the attached values
          */
-        private Map<String, Object> toParameters( Map<Long, PolyValue> values, Map<Long, Pair<PolyType, PolyType>> parameterTypes ) {
+        private Map<String, Object> toParameters( Map<Long, PolyValue> values, Map<Long, NestedPolyType> parameterTypes, boolean nested ) {
             Map<String, Object> parameters = new HashMap<>();
-            for ( Entry<Long, PolyValue> entry : values.entrySet().stream().filter( e -> parameterTypes.containsKey( e.getKey() ) ).collect( Collectors.toList() ) ) {
+            for ( Entry<Long, PolyValue> entry : values.entrySet().stream().filter( e -> parameterTypes.containsKey( e.getKey() ) ).toList() ) {
                 parameters.put(
                         NeoUtil.asParameter( entry.getKey(), false ),
-                        NeoUtil.fixParameterValue( entry.getValue(), parameterTypes.get( entry.getKey() ) ) );
+                        NeoUtil.fixParameterValue( entry.getValue(), parameterTypes.get( entry.getKey() ), false ) );
             }
             return parameters;
         }
 
 
-        static Function1<Record, PolyValue[]> getter( List<PolyType> types, List<PolyType> componentTypes ) {
-            return NeoUtil.getTypesFunction( types, componentTypes );
+        static Function1<Record, PolyValue[]> getter( NestedPolyType types ) {
+            return NeoUtil.getTypesFunction( types );
         }
 
 
