@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,9 +24,6 @@ import java.math.RoundingMode;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
-import org.apache.calcite.avatica.util.DateTimeUtils;
-import org.apache.calcite.avatica.util.TimeUnit;
 import org.polypheny.db.algebra.constant.FunctionCategory;
 import org.polypheny.db.algebra.constant.Kind;
 import org.polypheny.db.algebra.operators.OperatorName;
@@ -88,6 +85,8 @@ import org.polypheny.db.util.CoreUtil;
 import org.polypheny.db.util.InitializerContext;
 import org.polypheny.db.util.Pair;
 import org.polypheny.db.util.Util;
+import org.polypheny.db.util.temporal.DateTimeUtils;
+import org.polypheny.db.util.temporal.TimeUnit;
 
 
 /**
@@ -121,14 +120,10 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
                 OperatorRegistry.get( OperatorName.MINUS ),
                 ( cx, call ) -> {
                     final RexCall e = (RexCall) StandardConvertletTable.this.convertCall( cx, call, (SqlOperator) call.getOperator() );
-                    switch ( e.getOperands().get( 0 ).getType().getPolyType() ) {
-                        case DATE:
-                        case TIME:
-                        case TIMESTAMP:
-                            return convertDatetimeMinus( cx, OperatorRegistry.get( OperatorName.MINUS_DATE, SqlDatetimeSubtractionOperator.class ), call );
-                        default:
-                            return e;
-                    }
+                    return switch ( e.getOperands().get( 0 ).getType().getPolyType() ) {
+                        case DATE, TIME, TIMESTAMP -> convertDatetimeMinus( cx, OperatorRegistry.get( OperatorName.MINUS_DATE, SqlDatetimeSubtractionOperator.class ), call );
+                        default -> e;
+                    };
                 } );
 
         registerOp( OracleSqlOperatorTable.LTRIM, new TrimConvertlet( SqlTrimFunction.Flag.LEADING ) );
@@ -437,18 +432,17 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
         assert call.getKind() == Kind.CAST;
         final SqlNode left = call.operand( 0 );
         final SqlNode right = call.operand( 1 );
-        if ( right instanceof SqlIntervalQualifier ) {
-            final SqlIntervalQualifier intervalQualifier = (SqlIntervalQualifier) right;
+        if ( right instanceof SqlIntervalQualifier intervalQualifier ) {
             if ( left instanceof SqlIntervalLiteral ) {
                 RexLiteral sourceInterval = (RexLiteral) cx.convertExpression( left );
-                BigDecimal sourceValue = sourceInterval.value.asInterval().value;
+                Long sourceValue = sourceInterval.value.asInterval().millis;
                 RexLiteral castedInterval = cx.getRexBuilder().makeIntervalLiteral( sourceValue, intervalQualifier );
                 return castToValidatedType( cx, call, castedInterval );
             } else if ( left instanceof SqlNumericLiteral ) {
                 RexLiteral sourceInterval = (RexLiteral) cx.convertExpression( left );
-                BigDecimal sourceValue = sourceInterval.getValue().asNumber().bigDecimalValue();
-                final BigDecimal multiplier = intervalQualifier.getUnit().multiplier;
-                sourceValue = sourceValue.multiply( multiplier );
+                long sourceValue = sourceInterval.getValue().asNumber().longValue();
+                final long multiplier = intervalQualifier.getUnit().multiplier.longValue();
+                sourceValue = sourceValue * multiplier;
                 RexLiteral castedInterval = cx.getRexBuilder().makeIntervalLiteral( sourceValue, intervalQualifier );
                 return castToValidatedType( cx, call, castedInterval );
             }
@@ -521,7 +515,7 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
 
     /**
      * Converts a call to the {@code EXTRACT} function.
-     *
+     * <p>
      * Called automatically via reflection.
      */
     public RexNode convertExtract( SqlRexContext cx, SqlExtractFunction op, SqlCall call ) {
@@ -657,7 +651,7 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
 
     /**
      * Converts a call to an operator into a {@link RexCall} to the same operator.
-     *
+     * <p>
      * Called automatically via reflection.
      *
      * @param cx Context
@@ -680,7 +674,6 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
                         ? PolyOperandTypeChecker.Consistency.NONE
                         : op.getOperandTypeChecker().getConsistency();
         if ( op.getOperatorName() == OperatorName.CROSS_MODEL_ITEM ) {
-            // todo dl, check if this is okey
             RexNode target = cx.convertExpression( call.operand( 0 ) );
             return rexBuilder.makeCall(
                     rexBuilder.getTypeFactory().createPolyType( PolyType.VARCHAR, 255 ),
@@ -724,15 +717,12 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
 
 
     private PolyValue toPolyValue( SqlNode node ) {
-        switch ( node.getKind() ) {
-            case LITERAL:
-                return ((SqlLiteral) node).getPolyValue();
-            case CAST:
-                return PolyValue.convert( toPolyValue( ((SqlCall) node).operand( 0 ) ), ((DataTypeSpec) ((SqlCall) node).operand( 1 )).getType() );
-            case ARRAY_VALUE_CONSTRUCTOR:
-                return PolyList.of( ((SqlCall) node).getSqlOperandList().stream().map( this::toPolyValue ).collect( Collectors.toList() ) );
-        }
-        return null;
+        return switch ( node.getKind() ) {
+            case LITERAL -> ((SqlLiteral) node).getPolyValue();
+            case CAST -> PolyValue.convert( toPolyValue( ((SqlCall) node).operand( 0 ) ), ((DataTypeSpec) ((SqlCall) node).operand( 1 )).getType() );
+            case ARRAY_VALUE_CONSTRUCTOR -> PolyList.of( ((SqlCall) node).getSqlOperandList().stream().map( this::toPolyValue ).toList() );
+            default -> null;
+        };
     }
 
 
@@ -820,21 +810,8 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
                 List<RexNode> operands = ((RexCall) rex).getOperands();
                 if ( operands.size() == 2 ) {
                     final PolyType polyType = operands.get( 0 ).getType().getPolyType();
-                    switch ( polyType ) {
-                        case INTERVAL_YEAR:
-                        case INTERVAL_YEAR_MONTH:
-                        case INTERVAL_MONTH:
-                        case INTERVAL_DAY:
-                        case INTERVAL_DAY_HOUR:
-                        case INTERVAL_DAY_MINUTE:
-                        case INTERVAL_DAY_SECOND:
-                        case INTERVAL_HOUR:
-                        case INTERVAL_HOUR_MINUTE:
-                        case INTERVAL_HOUR_SECOND:
-                        case INTERVAL_MINUTE:
-                        case INTERVAL_MINUTE_SECOND:
-                        case INTERVAL_SECOND:
-                            operands = ImmutableList.of( operands.get( 1 ), operands.get( 0 ) );
+                    if ( Objects.requireNonNull( polyType ) == PolyType.INTERVAL ) {
+                        operands = ImmutableList.of( operands.get( 1 ), operands.get( 0 ) );
                     }
                 }
                 return rexBuilder.makeCall( rex.getType(), OperatorRegistry.get( OperatorName.DATETIME_PLUS ), operands );
@@ -853,7 +830,7 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
 
     /**
      * Converts a BETWEEN expression.
-     *
+     * <p>
      * Called automatically via reflection.
      */
     public RexNode convertBetween( SqlRexContext cx, SqlBetweenOperator op, SqlCall call ) {
@@ -896,7 +873,7 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
 
     /**
      * Converts a LiteralChain expression: that is, concatenates the operands immediately, to produce a single literal string.
-     *
+     * <p>
      * Called automatically via reflection.
      */
     public RexNode convertLiteralChain( SqlRexContext cx, SqlLiteralChainOperator op, SqlCall call ) {
@@ -909,7 +886,7 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
 
     /**
      * Converts a ROW.
-     *
+     * <p>
      * Called automatically via reflection.
      */
     public RexNode convertRow( SqlRexContext cx, SqlRowOperator op, SqlCall call ) {
@@ -928,7 +905,7 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
 
     /**
      * Converts a call to OVERLAPS.
-     *
+     * <p>
      * Called automatically via reflection.
      */
     public RexNode convertOverlaps( SqlRexContext cx, SqlOverlapsOperator op, SqlCall call ) {
@@ -1393,24 +1370,19 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
             RexNode interval2Add;
             SqlIntervalQualifier qualifier = new SqlIntervalQualifier( unit, null, unitLiteral.getPos() );
             RexNode op1 = cx.convertExpression( call.operand( 1 ) );
-            switch ( unit ) {
-                case MICROSECOND:
-                case NANOSECOND:
-                    interval2Add =
-                            divide(
-                                    rexBuilder,
-                                    multiply(
-                                            rexBuilder,
-                                            rexBuilder.makeIntervalLiteral( BigDecimal.ONE, qualifier ),
-                                            op1 ),
-                                    BigDecimal.ONE.divide( unit.multiplier, RoundingMode.UNNECESSARY ) );
-                    break;
-                default:
-                    interval2Add = multiply(
-                            rexBuilder,
-                            rexBuilder.makeIntervalLiteral( unit.multiplier, qualifier ),
-                            op1 );
-            }
+            interval2Add = switch ( unit ) {
+                case MICROSECOND, NANOSECOND -> divide(
+                        rexBuilder,
+                        multiply(
+                                rexBuilder,
+                                rexBuilder.makeIntervalLiteral( 1L, qualifier ),
+                                op1 ),
+                        BigDecimal.ONE.divide( unit.multiplier, RoundingMode.UNNECESSARY ) );
+                default -> multiply(
+                        rexBuilder,
+                        rexBuilder.makeIntervalLiteral( 1L, qualifier ),
+                        op1 );
+            };
 
             return rexBuilder.makeCall(
                     OperatorRegistry.get( OperatorName.DATETIME_PLUS ),
@@ -1425,13 +1397,6 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
                     interval2Add );
         }
 
-
-        private RexNode interval2Num( RexBuilder rexBuilder, RexLiteral rexLiteral ) {
-            return rexBuilder.makeCall(
-                    AlgDataTypeFactory.DEFAULT.createPolyType( PolyType.BIGINT ),
-                    OperatorRegistry.get( OperatorName.UNWRAP_INTERVAL ),
-                    rexLiteral );
-        }
 
     }
 
@@ -1490,4 +1455,3 @@ public class StandardConvertletTable extends ReflectiveConvertletTable {
     }
 
 }
-
