@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2023 The Polypheny Project
+ * Copyright 2019-2024 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.polypheny.db.webui.models;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.EqualsAndHashCode;
 import lombok.Value;
@@ -39,7 +38,7 @@ public class IndexAdapterModel extends IdEntity {
 
 
     public static IndexAdapterModel from( DataStore<?> store ) {
-        return new IndexAdapterModel( store.adapterId, store.getUniqueName(), store.getAvailableIndexMethods().stream().map( IndexAdapterModel.IndexMethodModel::from ).collect( Collectors.toList() ) );
+        return new IndexAdapterModel( store.adapterId, store.getUniqueName(), store.getAvailableIndexMethods().stream().map( IndexAdapterModel.IndexMethodModel::from ).toList() );
     }
 
 
@@ -51,7 +50,7 @@ public class IndexAdapterModel extends IdEntity {
 
 
         public static IndexMethodModel from( DataStore.IndexMethodModel index ) {
-            return new IndexMethodModel( index.name, index.displayName );
+            return new IndexMethodModel( index.name(), index.displayName() );
         }
 
     }
